--- a/Part1-HTML/register.html
+++ b/Part1-HTML/register.html
@@ -4,23 +4,35 @@
         <title>Register</title>
     </head>
     <body>
-        <form>
-            First name: <input type="text"><br>
-            Last name: <input type="text"><br>
-            Email: <input type="email" required><br>
-            Password: <input type="password" minlength="5" required><br>
-            Date of birth: <input type="date"><br>
+        <!-- <header>
+            <h1>Register</h1>
+            <heading>Test</heading>
+            <input type="list">
+            <list>test</list>
+        </header>
+        <nav>
+            <a href="www.google.com"></a>
+        </nav>
+        <footer>
+            <p>Website made with love and enthusiasm.</p>
+        </footer> -->
+        <form method="GET">
+            First name: <input type="text" name="firstname"><br>
+            Last name: <input type="text" name="lastname"><br>
+            Email: <input type="email" name="email" required><br>
+            Password: <input type="password" name="password" minlength="3" required><br>
+            Birthday: <input type="date" name="birthday"><br>
             Gender:<br>
-            <input type="radio" name="gender">Male<br>  <!--- name="gender" lets you choose only one-->
-            <input type="radio" name="gender">Female<br> <!--- name has to be same with every radio input-->
-            <input type="radio" name="gender">Other<br>
+            <input type="radio" name="gender" value="male">Male<br> name="gender" lets you choose only one
+            <input type="radio" name="gender" value="female">Female<br>  name has to be same with every radio input
+            <input type="radio" name="gender" value="other">Other<br>
             Pets: <br>
-            <input type="checkbox"> Cat<br> <!-----Checkbox lets you choose multiple---->
-            <input type="checkbox"> Dog<br>
+            <input type="checkbox" name="cat"> Cat<br> Checkbox lets you choose multiple
+            <input type="checkbox" name="dog"> Dog<br>
             Cars: <br>
-            <select>
-                <option value="volvo">Volvo</option>
-                <option value="audi">Audi</option>
+            <select name="cars">
+                <option value="volvo" name="volvo">Volvo</option>
+                <option value="audi" name="audi">Audi</option>
             </select><br>
             <br>
             <input type="submit" value="Register">
