--- a/Part2-CSS/index.html
+++ b/Part2-CSS/index.html
@@ -17,9 +17,16 @@
         </header>
         <section>
             <h2>HOME</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Ullam dolore, tenetur earum nisi, autem nam fugiat dolorum odit beatae 
-                voluptatibus ratione deserunt suscipit eveniet repellat eius vero tempora sint impedit!</p>
+        <div id="div1">
+            <p class="webtext active">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <p class="webtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <p class="webtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div id="div2">
+            <p class="webtext active">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <p class="webtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <p class="webtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
         </section>
     </body>
 </html>
