--- a/Part2-CSS/about.html
+++ b/Part2-CSS/about.html
@@ -3,6 +3,7 @@
     <head>
         <title>Eka css sivu</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -16,9 +17,14 @@
         </header>
         <section>
             <h2>About</h2>
+            <img src="https://images.unsplash.com/photo-1594231061653-c29bcb5ac28b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1867&q=80" width="200px" height="200px">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                 Illum alias animi quisquam provident maiores assumenda vitae in error,
-                 cum sit dolorum, tenetur, et ratione hic! Totam dicta impedit eaque fugiat?</p>
+                 cum sit dolorum, tenetur, et ratione hic! Totam dicta impedit eaque fugiat?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Natus sed nam eligendi reprehenderit ad tempore atque consectetur 
+                reiciendis, pariatur laudantium iste vero non, soluta, nemo exercitationem libero iusto. Ex, iusto.</p>
         </section>
+        <footer>Website made with love</footer>
     </body>
 </html>
