--- a/Part1-HTML/newpage.html
+++ b/Part1-HTML/newpage.html
@@ -4,7 +4,7 @@
         <title>JJooooo</title>
     </head>
     <body>
-        <h1>JJJOOOO OOMMIE</h1>
+        <h1>JJJOO</h1>
         <a href="./first-webpage.html">GET BACK</a>
     </body>
 </html>
