--- a/Part1-HTML/first-webpage.html
+++ b/Part1-HTML/first-webpage.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>not my first website</title>
+        <title>website</title>
     </head>
     <body>
         <ul>
             <a href="./newpage.html">New Page</a><br>
             <a href="./register.html">Register</a>
-            <li>Banaani</li>
-            <li>Omena</li><hr>
+            <li>Banana</li>
+            <li>Apple</li><hr>
             <ul>
                 <li>Pink Lady</li><br>
                 <img src=https://cdn.shopify.com/s/files/1/0065/1637/5588/products/Apple_Pink_Lady.png?v=1555678874" width="100" height="100">
@@ -17,7 +17,7 @@
 
                 <li>Idared</li>
             </ul>
-            <li>Mandariini</li>
+            <li>Pineapple</li>
         </ul>
     </body>
 </html>
