--- a/Part2-CSS/index.html
+++ b/Part2-CSS/index.html
@@ -24,7 +24,7 @@
         </div>
         <div id="div2">
             <p class="webtext active">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-            <p class="webtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            <p class="webtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit lorem.</p>
             <p class="webtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
         </div>
         </section>
