--- a/Part2-CSS/login.html
+++ b/Part2-CSS/login.html
@@ -18,7 +18,7 @@
             <h2>Login</h2>
             <p><span>Lorem ipsum</span> dolor sit amet consectetur adipisicing elit. 
                 Blanditiis at repellat alias mollitia repellendus provident? Eveniet officiis quasi quibusdam. 
-                Alias magnam, natus accusantium ullam doloribus adipisci eius voluptas dolor voluptates Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Alias magnam, natus accusantium batur ullam doloribus adipisci eius voluptas dolor voluptates Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                 Fugit minus, repellendus illum consequatur fugiat architecto alias quaerat ex, autem quasi odio placeat earum optio, provident facere ducimus molestiae. Amet, error!</p>
         </section>
     </body>
